--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -1,36 +1,92 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: build-pack-upload
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_call:
+    inputs:
+      assembly-url:
+        description: 'The path to the assembly that would be packed.'
+        required: true
+        type: string
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+      assembly-prefix:
+        description: 'The prefix for the build artifacts to sign.'
+        required: true
+        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+      artifacts-prefix:
+        description: 'The name of the artifacts that contain the .nupkg files produced by the build.'
+        required: true
+        type: string
+    secrets:
+      codesigning-cert:
+        description: 'The base64 string that represent the code signing certificate.'
+        required: true
+      codesigning-cert-pwd:
+        description: 'The password for the private key of the code signing certificate.'
+        required: true
+      nuget-read-pat:
+        description: 'The Personal Access Token (PAT) used to access the Wintdev internal nuget feed when restoring.'
+        required: true
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Build (${{ inputs.assembly_url }})
+    runs-on: windows-latest
+    env:
+      CONFIGURATION: release
+      WINT_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
+    strategy:
+      fail-fast: true
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Add GitHub Nuget registry
+        run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_NUGET_SOURCE_URL }}"
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install dotnet
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: |
+            5.0.x
+            6.0.x
+
+      - name: Install GitVersion (v5.x)
+        uses: gittools/actions/gitversion/setup@v0.9.7
+        with:
+          versionSpec: '5.x'
+
+      - name: Run GitVersion
+        id:   gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.7
+
+      - name: Restore
+        run: dotnet restore ${{ inputs.assembly-url }}
+
+      - name: Build
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          dotnet build ${{ inputs.assembly-url }} --configuration ${{ env.CONFIGURATION }} /p:AssemblyVersion=${{ steps.gitversion.outputs.assemblySemFileVer }} /p:FileVersion=${{ steps.gitversion.outputs.assemblySemFileVer }} /p:InformationalVersion=${{ steps.gitversion.outputs.Sha }} /p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }} --no-restore
+
+      - name: Decode Signing Certificate
+        run: |
+          New-Item -ItemType directory -Path certificate
+          Set-Content -Path certificate\codesigning.wint.se.txt -Value '${{ secrets.codesigning-cert }}'
+          certutil -decode certificate\codesigning.wint.se.txt certificate\codesigning.wint.se.pfx
+
+      - name: Sign
+        run: |
+          $items = Get-ChildItem -recurse -file -include @('${{ inputs.assembly-prefix }}*.dll', '${{ inputs.assembly-prefix }}*.exe') -exclude @('*test*.dll')
+          foreach($item in $items) {
+            & 'c:\progra~2\windows kits\10\bin\10.0.17763.0\x86\signtool.exe' sign  -f 'certificate\codesigning.wint.se.pfx' -p '${{ secrets.codesigning-cert-pwd }}' -t 'http://timestamp.digicert.com' -fd 'SHA256' $item.FullName
+          }
+
+      - name: Pack
+        run: | 
+          dotnet pack ${{ inputs.assembly-url }} --configuration ${{ env.CONFIGURATION }} /p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }} --no-build
+      
+      - name: 'Upload package artifact(s)'
+        uses: actions/upload-artifact@v2
+        with:
+          name: '${{ inputs.artifacts-prefix }}-${{ github.run_id }}'
+          path: '**/*.nupkg'
+          retention-days: 1
