--- a/.github/workflows/build-test-upload-app.yml
+++ b/.github/workflows/build-test-upload-app.yml
@@ -1,4 +1,4 @@
-name: build-test-upload
+name: build-test-upload-app
 on:
   workflow_call:
     inputs:
@@ -40,14 +40,6 @@ jobs:
       WINT_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
 
     steps:
-      - name: Add GitHub Nuget registry
-        run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_NUGET_SOURCE_URL }}"
-
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
       - name: Install dotnet
         uses: actions/setup-dotnet@v1
         with:
@@ -55,6 +47,14 @@ jobs:
             3.1.x
             5.0.x
             6.0.x
+
+      - name: Add GitHub Nuget registry
+        run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_NUGET_SOURCE_URL }}"
+
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Install GitVersion (v5.x)
         uses: gittools/actions/gitversion/setup@v0.9.7
