--- a/.github/workflows/build-upload-package.yml
+++ b/.github/workflows/build-upload-package.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Add GitHub Nuget registry
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_NUGET_SOURCE_URL }}"
 
+      - name: Add Azure Nuget registry
+        run: dotnet nuget add source "http://wintnuget.azurewebsites.net/nuget"
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
