--- a/.github/workflows/build-pack-push-package.yml
+++ b/.github/workflows/build-pack-push-package.yml
@@ -1,4 +1,4 @@
-name: build-pack-upload-package
+name: build-pack-push-package
 on:
   workflow_call:
     inputs:
@@ -30,11 +30,12 @@ jobs:
   build:
     name: Build (${{ inputs.assembly_url }})
     runs-on: windows-latest
-    env:
-      CONFIGURATION: release
-      WINT_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
     strategy:
       fail-fast: true
+    env:
+      WINT_NUGET_SOURCE_GITHUB_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
+      WINT_NUGET_SOURCE_AZURE_URL: 'http://wintnuget.azurewebsites.net/nuget'
+      CONFIGURATION: release
     steps:
       - name: Install dotnet
         uses: actions/setup-dotnet@v1
@@ -43,10 +44,10 @@ jobs:
             6.0.x
 
       - name: Add GitHub Nuget registry
-        run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_NUGET_SOURCE_URL }}"
+        run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_NUGET_SOURCE_GITHUB_URL }}"
 
       - name: Add Azure Nuget registry
-        run: dotnet nuget add source "http://wintnuget.azurewebsites.net/nuget"
+        run: dotnet nuget add source "${{ env.WINT_NUGET_SOURCE_AZURE_URL }}"
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -86,9 +87,6 @@ jobs:
         run: | 
           dotnet pack ${{ inputs.assembly-url }} --configuration ${{ env.CONFIGURATION }} /p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }} --no-build
       
-      - name: 'Upload package artifact(s)'
-        uses: actions/upload-artifact@v2
-        with:
-          name: '${{ inputs.artifacts-prefix }}-${{ github.run_id }}'
-          path: '**/*.nupkg'
-          retention-days: 1
+      - name: Push
+        run: |
+          dotnet nuget push **/*.nupkg -s ${{ env.WINT_NUGET_SOURCE_GITHUB_URL }} -k ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
