--- a/.github/workflows/build-pack-push-package.yml
+++ b/.github/workflows/build-pack-push-package.yml
@@ -29,8 +29,8 @@ jobs:
     strategy:
       fail-fast: true
     env:
-      WINT_NUGET_SOURCE_GITHUB_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
-      WINT_NUGET_SOURCE_AZURE_URL: 'http://wintnuget.azurewebsites.net/nuget'
+      WINT_GITHUB_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
+      WINT_AZURE_NUGET_SOURCE_URL: 'https://wintnuget.azurewebsites.net/nuget'
       CONFIGURATION: release
     steps:
       - name: Install dotnet
@@ -40,10 +40,10 @@ jobs:
             6.0.x
 
       - name: Add GitHub Nuget registry
-        run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_NUGET_SOURCE_GITHUB_URL }}"
+        run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
 
       - name: Add Azure Nuget registry
-        run: dotnet nuget add source "${{ env.WINT_NUGET_SOURCE_AZURE_URL }}"
+        run: dotnet nuget add source "${{ env.WINT_AZURE_NUGET_SOURCE_URL }}"
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -56,7 +56,7 @@ jobs:
           versionSpec: '5.x'
 
       - name: Run GitVersion
-        id:   gitversion
+        id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.7
 
       - name: Restore
@@ -80,9 +80,9 @@ jobs:
           }
 
       - name: Pack
-        run: | 
+        run: |
           dotnet pack ${{ inputs.assembly-url }} --configuration ${{ env.CONFIGURATION }} /p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }} --no-build
-      
+
       - name: Push
         run: |
-          dotnet nuget push **/*.nupkg -s ${{ env.WINT_NUGET_SOURCE_GITHUB_URL }} -k ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+          dotnet nuget push **/*.nupkg -s ${{ env.WINT_GITHUB_NUGET_SOURCE_URL }} -k ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
