--- a/.github/workflows/build-pack-push-package.yml
+++ b/.github/workflows/build-pack-push-package.yml
@@ -3,24 +3,24 @@ on:
   workflow_call:
     inputs:
       assembly-url:
-        description: 'The path to the assembly that would be packed.'
+        description: "The path to the assembly that would be packed."
         required: true
         type: string
 
       assembly-prefix:
-        description: 'The prefix for the build artifacts to sign.'
+        description: "The prefix for the build artifacts to sign."
         required: true
         type: string
 
     secrets:
       codesigning-cert:
-        description: 'The base64 string that represent the code signing certificate.'
+        description: "The base64 string that represent the code signing certificate."
         required: true
       codesigning-cert-pwd:
-        description: 'The password for the private key of the code signing certificate.'
+        description: "The password for the private key of the code signing certificate."
         required: true
       nuget-read-pat:
-        description: 'The Personal Access Token (PAT) used to access the Wintdev internal nuget feed when restoring.'
+        description: "The Personal Access Token (PAT) used to access the Wintdev internal nuget feed when restoring."
         required: true
 jobs:
   build:
@@ -29,8 +29,7 @@ jobs:
     strategy:
       fail-fast: true
     env:
-      WINT_GITHUB_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
-      WINT_AZURE_NUGET_SOURCE_URL: 'https://wintnuget.azurewebsites.net/nuget'
+      WINT_GITHUB_NUGET_SOURCE_URL: "https://nuget.pkg.github.com/WintDev/index.json"
       CONFIGURATION: release
     steps:
       - name: Install dotnet
@@ -42,9 +41,6 @@ jobs:
       - name: Add GitHub Nuget registry
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
 
-      - name: Add Azure Nuget registry
-        run: dotnet nuget add source "${{ env.WINT_AZURE_NUGET_SOURCE_URL }}"
-
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -53,7 +49,7 @@ jobs:
       - name: Install GitVersion (v5.x)
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
-          versionSpec: '5.x'
+          versionSpec: "5.x"
 
       - name: Run GitVersion
         id: gitversion
