--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -3,13 +3,13 @@ on:
   workflow_call:
     inputs:
       solution-name:
-        description: 'The name of the solution to build and test.'
+        description: "The name of the solution to build and test."
         required: true
         type: string
 
     secrets:
       nuget-read-pat:
-        description: 'The Personal Access Token used to access the WintDev internal nuget feed when restoring.'
+        description: "The Personal Access Token used to access the WintDev internal nuget feed when restoring."
         required: true
 
 jobs:
@@ -20,8 +20,7 @@ jobs:
       fail-fast: true
     env:
       CONFIGURATION: release
-      WINT_GITHUB_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
-      WINT_AZURE_NUGET_SOURCE_URL: 'https://wintnuget.azurewebsites.net/nuget'
+      WINT_GITHUB_NUGET_SOURCE_URL: "https://nuget.pkg.github.com/WintDev/index.json"
 
     steps:
       - name: Install dotnet
@@ -32,9 +31,6 @@ jobs:
 
       - name: Add GitHub Nuget registry
         run: dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
-
-      - name: Add Azure Nuget registry
-        run: dotnet nuget add source "${{ env.WINT_AZURE_NUGET_SOURCE_URL }}"
 
       - name: Checkout
         uses: actions/checkout@v2
