--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -72,8 +72,8 @@ jobs:
 
       - name: Build
         run: |
-          docker build . -f ${{ inputs.dockerfile }} -t '${{ get_container_name.outputs.container_name }}:${{ jobs.calculate_tag.outputs.tag }}' --build-arg 'WINTDEV_NUGET_ACCESSTOKEN=${{ secrets.nuget-read-pat }}' --build-arg 'ASPNETCORE_ENVIRONMENT=${{ inputs.environment }}'
+          docker build . -f ${{ inputs.dockerfile }} -t '${{ steps.get_container_name.outputs.container_name }}:${{ steps.calculate_tag.outputs.tag }}' --build-arg 'WINTDEV_NUGET_ACCESSTOKEN=${{ secrets.nuget-read-pat }}' --build-arg 'ASPNETCORE_ENVIRONMENT=${{ github.event.inputs.environment }}'
 
       - name: Push
         run: |
-          docker push '${{ get_container_name.outputs.container_name }}:${{ jobs.calculate_tag.outputs.tag }}'
+          docker push '${{ steps.get_container_name.outputs.container_name }}:${{ steps.calculate_tag.outputs.tag }}'
