--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           REFTAG=${{ needs.get_tag.outputs.tag }}
           INPUT_TAG=${{ inputs.tag }}
-          TAG=${{ INPUT_TAG:-REFTAG }}
+          TAG=${INPUT_TAG:-REFTAG}
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
       - name: Build
