--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           INPUT_CONTAINER_NAME=${{ inputs.container-name }}
           REPO=${{ github.repository }}
-          NAME=${INPUT_CONTAINER_NAME:-REPO}
+          NAME=${{INPUT_CONTAINER_NAME || REPO}}
           CONTAINER_NAME='${{ inputs.login-server }}/$NAME'
           echo "container_name=$CONTAINER_NAME" >> $GITHUB_OUTPUT
 
@@ -69,7 +69,7 @@ jobs:
         run: |
           REFTAG=${{ needs.get_tag.outputs.tag }}
           INPUT_TAG=${{ inputs.tag }}
-          TAG=${INPUT_TAG:-REFTAG}
+          TAG=${{ INPUT_TAG || REFTAG }}
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
       - name: Build
