--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -38,6 +38,10 @@ on:
       nuget-read-pat:
         description: 'The Personal Access Token used to access the WintDev internal nuget feed when restoring.'
         required: true
+    outputs:
+      container_ref:
+        description: 'The name in the format name:tag that was pushet to the container registry.'
+        value: ${{ jobs.push_container.outputs.container_ref }}
 
 jobs:
   get_tag:
@@ -72,11 +76,17 @@ jobs:
           TAG=${{ inputs.tag || needs.get_tag.outputs.tag }}
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
+      - name: Calculate Container ref
+        id: get_container_ref
+        run: |
+          CONTAINER_REF='${{ steps.get_container_name.outputs.container_name }}:${{ steps.calculate_tag.outputs.tag }}'
+          echo "container_ref=$CONTAINER_REF" >> $GITHUB_OUTPUT
+
       - name: Build
         working-directory: ${{ inputs.working-directory }}
         run: |
-          docker build . -f ${{ inputs.dockerfile }} -t '${{ steps.get_container_name.outputs.container_name }}:${{ steps.calculate_tag.outputs.tag }}' --build-arg 'WINTDEV_NUGET_ACCESSTOKEN=${{ secrets.nuget-read-pat }}' --build-arg 'ASPNETCORE_ENVIRONMENT=${{ inputs.environment }}'
+          docker build . -f ${{ inputs.dockerfile }} -t ${{ steps.get_container_ref.outputs.container_ref }} --build-arg 'WINTDEV_NUGET_ACCESSTOKEN=${{ secrets.nuget-read-pat }}' --build-arg 'ASPNETCORE_ENVIRONMENT=${{ inputs.environment }}'
 
       - name: Push
         run: |
-          docker push '${{ steps.get_container_name.outputs.container_name }}:${{ steps.calculate_tag.outputs.tag }}'
+          docker push ${{ steps.get_container_ref.outputs.container_ref }}
