--- a/.github/workflows/get-container-tag.yml
+++ b/.github/workflows/get-container-tag.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Tag Staging or Production Container
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/development'
         run: |
-          echo "TAG=${{ steps.gitversion.outputs.FullSemVer }}" >> $GITHUB_ENV
+          echo "TAG=${{ steps.gitversion.outputs.SemVer }}" >> $GITHUB_ENV
 
       - name: Tag Feature container
         if: ${{ startsWith(github.ref, 'refs/heads/feature') || startsWith(github.ref, 'refs/heads/bugfix') || startsWith(github.ref, 'refs/heads/experimental') }}
