--- a/.github/workflows/build-deploy-container.yml
+++ b/.github/workflows/build-deploy-container.yml
@@ -133,13 +133,13 @@ jobs:
         if: ${{ inputs.container-app-environment == '' && (inputs.environment == 'Production' || inputs.environment == 'production') }}
         shell: bash
         run: |
-          echo "CONTAINER_APP_ENVIRONMENT=/subscriptions/274a26c3-e153-4564-b062-15c5e39cdfdb/resourceGroups/WintContainer/providers/Microsoft.App/managedEnvironments/WintContainerEnvironment" >> $GITHUB_ENV
+          echo "CONTAINER_APP_ENVIRONMENT=/subscriptions/${{secrets.AZURE_SUBSCRIPTION}}/resourceGroups/WintContainer/providers/Microsoft.App/managedEnvironments/WintContainerEnvironment" >> $GITHUB_ENV
 
       - name: 'Set staging container app environment'
         if: ${{ inputs.container-app-environment == '' && inputs.environment != 'Production' && inputs.environment != 'production' }}
         shell: bash
         run: |
-          echo "CONTAINER_APP_ENVIRONMENT=/subscriptions/274a26c3-e153-4564-b062-15c5e39cdfdb/resourceGroups/WintContainer/providers/Microsoft.App/managedEnvironments/WintContainerEnvironmentTest" >> $GITHUB_ENV
+          echo "CONTAINER_APP_ENVIRONMENT=/subscriptions/${{secrets.AZURE_SUBSCRIPTION}}/resourceGroups/WintContainer/providers/Microsoft.App/managedEnvironments/WintContainerEnvironmentTest" >> $GITHUB_ENV
 
       - name: 'Add environment environment variable to container app environment variables'
         if: ${{ inputs.container-app-env-vars != '' }}
@@ -173,3 +173,31 @@ jobs:
           --environment ${{ env.CONTAINER_APP_ENVIRONMENT }} \
           --location ${{ inputs.container-app-location }} \
           ${{ env.CA_GH_ACTION_CONTAINER_APP_ENVIRONMENT_VARIABLES_ARG }}
+
+  get_managed_id:
+    uses: WintDev/actions/.github/workflows/get-managed-identity.yml@alpha
+    needs: deploy
+    name: Get the managed identity
+    with:
+      resourceGroup: ${{ inputs.container-app-resource-group }}
+      container-app-name: ${{ inputs.container-app-name }}
+    secrets:
+      azure-credentials: ${{ secrets.azure-credentials}}
+
+  assign_app_configuration_access:
+    name: Assign App Configuration access
+    runs-on: ubuntu-latest
+    needs: get_managed_id
+    steps:
+      - name: 'az login'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.azure-credentials }}
+
+      - name: assign_access
+        shell: bash
+        run: |
+          az role assignment create \
+          --assignee ${{ needs.get_managed_id.outputs.principal_id }} \
+          --role "App Configuration Data Reader" \
+          --scope /subscriptions/${{ secrets.AZURE_SUBSCRIPTION }}/resourceGroups/WintServicesCommon/providers/Microsoft.AppConfiguration/configurationStores/WintServicesAppConfiguration
